// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-0"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-1"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value="foo"
    />
    
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      onClick={[Function]}
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#ff6c82",
              "500": "#ff2d4d",
              "700": "#ff223d",
              "900": "#ac001a",
            },
            "neutral": Object {
              "100": "#f2f2f2",
              "300": "#cccccc",
              "500": "#999999",
              "700": "#4c4c4c",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#e5edfc",
              "300": "#5a88de",
              "500": "#1355d0",
              "700": "#0e44c4",
              "900": "#062ab3",
            },
            "secondary": Object {
              "100": "#f5b3cd",
              "300": "#e84d8b",
              "500": "#de0059",
              "700": "#d50048",
              "900": "#c8002e",
            },
            "success": Object {
              "100": "#edfadf",
              "300": "#a5e064",
              "500": "#7ed321",
              "700": "#6bc818",
              "900": "#3c6510",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#f5b24d",
              "500": "#f09100",
              "700": "#ec7e00",
              "900": "#a36300",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      cancel
    </span>
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 12px 0;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="input-2"
  >
    Text label
  </label>
  
  <div
    className="c2"
  >
    <input
      id="input-2"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 12px 0;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  color: #ff2d4d;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-3"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#ff6c82",
              "500": "#ff2d4d",
              "700": "#ff223d",
              "900": "#ac001a",
            },
            "neutral": Object {
              "100": "#f2f2f2",
              "300": "#cccccc",
              "500": "#999999",
              "700": "#4c4c4c",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#e5edfc",
              "300": "#5a88de",
              "500": "#1355d0",
              "700": "#0e44c4",
              "900": "#062ab3",
            },
            "secondary": Object {
              "100": "#f5b3cd",
              "300": "#e84d8b",
              "500": "#de0059",
              "700": "#d50048",
              "900": "#c8002e",
            },
            "success": Object {
              "100": "#edfadf",
              "300": "#a5e064",
              "500": "#7ed321",
              "700": "#6bc818",
              "900": "#3c6510",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#f5b24d",
              "500": "#f09100",
              "700": "#ec7e00",
              "900": "#a36300",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      error
    </span>
  </div>
  
  <span
    className="c3"
  >
    Error message
  </span>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-4"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={true}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  left: 12px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#ff6c82",
              "500": "#ff2d4d",
              "700": "#ff223d",
              "900": "#ac001a",
            },
            "neutral": Object {
              "100": "#f2f2f2",
              "300": "#cccccc",
              "500": "#999999",
              "700": "#4c4c4c",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#e5edfc",
              "300": "#5a88de",
              "500": "#1355d0",
              "700": "#0e44c4",
              "900": "#062ab3",
            },
            "secondary": Object {
              "100": "#f5b3cd",
              "300": "#e84d8b",
              "500": "#de0059",
              "700": "#d50048",
              "900": "#c8002e",
            },
            "success": Object {
              "100": "#edfadf",
              "300": "#a5e064",
              "500": "#7ed321",
              "700": "#6bc818",
              "900": "#3c6510",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#f5b24d",
              "500": "#f09100",
              "700": "#ec7e00",
              "900": "#a36300",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      search
    </span>
    <input
      id="input-5"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      disabled={true}
      id="input-6"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 12px 0;
  color: #4c4c4c;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-7"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  <span
    className="c2"
  >
    this is a helper text
  </span>
  
</div>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0 12px;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <input
      id="input-8"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
  left: 12px;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0 12px;
}

.c2 {
  position: relative;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <div
    className="c2"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3"
      description="this is a description label"
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#ff6c82",
              "500": "#ff2d4d",
              "700": "#ff223d",
              "900": "#ac001a",
            },
            "neutral": Object {
              "100": "#f2f2f2",
              "300": "#cccccc",
              "500": "#999999",
              "700": "#4c4c4c",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#e5edfc",
              "300": "#5a88de",
              "500": "#1355d0",
              "700": "#0e44c4",
              "900": "#062ab3",
            },
            "secondary": Object {
              "100": "#f5b3cd",
              "300": "#e84d8b",
              "500": "#de0059",
              "700": "#d50048",
              "900": "#c8002e",
            },
            "success": Object {
              "100": "#edfadf",
              "300": "#a5e064",
              "500": "#7ed321",
              "700": "#6bc818",
              "900": "#3c6510",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#f5b24d",
              "500": "#f09100",
              "700": "#ec7e00",
              "900": "#a36300",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      search
    </span>
    <input
      id="input-9"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="search"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-10"
      mask={[Function]}
      placeholder="this input has a placeholder"
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-11"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 13`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-12"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 14`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-13"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 15`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-14"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          "/",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 16`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-15"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="text"
      value=""
    />
    
  </div>
  
  
</div>
`;

exports[`Input component should match snapshots 17`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  bottom: 10px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  
  
  <div
    className="c1"
  >
    <input
      id="input-16"
      mask={[Function]}
      placeholder=""
      render={[Function]}
      required={false}
      type="password"
      value=""
    />
    
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c2"
      description=""
      onClick={[Function]}
      style={
        Object {
          "color": "",
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#ffe5e9",
              "300": "#ff6c82",
              "500": "#ff2d4d",
              "700": "#ff223d",
              "900": "#ac001a",
            },
            "neutral": Object {
              "100": "#f2f2f2",
              "300": "#cccccc",
              "500": "#999999",
              "700": "#4c4c4c",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#e5edfc",
              "300": "#5a88de",
              "500": "#1355d0",
              "700": "#0e44c4",
              "900": "#062ab3",
            },
            "secondary": Object {
              "100": "#f5b3cd",
              "300": "#e84d8b",
              "500": "#de0059",
              "700": "#d50048",
              "900": "#c8002e",
            },
            "success": Object {
              "100": "#edfadf",
              "300": "#a5e064",
              "500": "#7ed321",
              "700": "#6bc818",
              "900": "#3c6510",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#f5b24d",
              "500": "#f09100",
              "700": "#ec7e00",
              "900": "#a36300",
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
    >
      visibility
    </span>
  </div>
  
  
</div>
`;
